webook/webook-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-redis
spec:
  selector:
    app: webook-redis
  ports:
    - protocol: TCP
      port: 6379 #  k8s 内部访问端口
      targetPort: 6379 # Pod 暴露的端口
      nodePort: 31379 # 外部访问的端口
  type: NodePort
