webook/webook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook
spec:
  selector:
    app: webook # 对应 deployment 里的 spec - template - metadata - labels - app
  ports:
    - protocol: TCP
      port: 98
      targetPort: 8080 # 与 deployment 中容器的端口保持一致
  type: ClusterIP # 负载均衡，给 selector 里的 pod 做负载均衡
